Rolled back to version 17 of Java. Added license and revised Readme, touches on Javadoc